# mlspec-be-volumetry

./: .gitignore  Dockerfile  README.md  pyproject.toml
ci/: 01_build.sh  02_push.sh
ci/yaml/: cloudbuild.yaml
notebooks/: api_caller.ipynb
scripts/: download_model.sh  serve
src/: .env-example
src/be_volumetria/: gunicorn_conf.py  main.py
src/be_volumetria/api/routes/: api.py  healthz.py
src/be_volumetria/api/routes/analysis/: volumetry.py
src/be_volumetria/business_logic/: ml.py  utils.py  volumetry.py
src/be_volumetria/core/: config.py
src/be_volumetria/models/schemas/: volumetry.py
src/ml_models/: model_info.json
